syntax = "proto3";

import "api/google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/qulaz/artforintrovert-test/gen/api/v1;api";

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 price = 4;
};

message ProductList {
  repeated Product products = 2;
};

message GetProductsRequest {
  uint32 limit = 1;
  uint32 offset = 2;
}

message Id {
  string id = 1;
};

service ProductService {
  rpc GetProducts(GetProductsRequest) returns (ProductList) {
    option (google.api.http) = {
      get: "/products",
    };
  };
  rpc UpdateProduct(Product) returns (Product) {
    option (google.api.http) = {
      put: "/products/{id}",
      body: "*",
    };
  };
  rpc DeleteProduct(Id) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/products/{id}",
    };
  };
}
